Closed
Bug 1709250
Opened 5 years ago
Closed 5 years ago
Crash [@ mozilla::a11y::GeckoCustom::get_DOMNodeID(wchar_t**)] in browser tests
Categories
(Core :: Disability Access APIs, defect, P1)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
90 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox88 | --- | unaffected |
| firefox89 | --- | unaffected |
| firefox90 | --- | fixed |
People
(Reporter: Jamie, Assigned: Jamie)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
After bug 1694865, we're seeing intermittent crashes in tests in GeckoCustom::get_DOMNodeID. See bug 1652192 comment 50. I think this is because the accessible died. Previously, I guess we were calling GetContent() on a defunct accessible, but that is safe even when defunct. Now that the accessible is actually null, it's not safe.
| Assignee | ||
Comment 1•5 years ago
|
||
We didn't do defunct checks previously, but it seems the methods we were calling were safe on defunct accessibles.
Now that retrieving the accessible returns null once it's shut down, we need to explicitly null check it.
Updated•5 years ago
|
Keywords: regression
Comment 2•5 years ago
|
||
Set release status flags based on info from the regressing bug 1694865
status-firefox88:
--- → unaffected
status-firefox89:
--- → unaffected
status-firefox90:
--- → affected
status-firefox-esr78:
--- → unaffected
Pushed by jteh@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/51d2b18dc264
Null check LocalAcc() in GeckoCustom. r=morgan
Comment 4•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•